tests/out/error/assign/void.out
tests/out/error/assign/void.in.bt:3:14 error: expected non-void expression
tests/out/error/assign/void.in.bt:5:15 error: expected non-void expression
tests/out/error/assign/void.in.bt:7:6 error: expected non-void expression
